some fix in readme, config

--- a/example.env
+++ b/example.env
@@ -1,8 +1,8 @@
-FASTAPI_HOST=
-FASTAPI_PORT=
-DATABASE_DRIVER=
-DATABASE_USERNAME=
-DATABASE_PASSWORD=
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_NAME=
+FASTAPI_HOST=127.0.0.1
+FASTAPI_PORT=8000
+DATABASE_DRIVER=postgresql+psycopg2
+DATABASE_USER=user
+DATABASE_PASSWORD=password
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5432
+DATABASE_NAME=db_name
