--- a/example.env
+++ b/example.env
@@ -5,4 +5,4 @@ DATABASE_USER=user
 DATABASE_PASSWORD=password
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=5432
-DATABASE_NAME=db_name
+DATABASE_NAME=name
