--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ alembic = "^1.13.1"
 asyncpg = "^0.29.0"
 
 
+[tool.poetry.group.test.dependencies]
+pytest = "^8.0.1"
+httpx = "0.26"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
