--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   #  http://pgconfigurator.cybertec.at/ For Postgres Configuration
 
   pg_database:
-    image: postgres:16.2-alpine
-    container_name: rieltor_db
+    image: rieltor_pg_db
+    container_name: rieltor_pg_db
     ports:
       - 5432:5432
     restart: always
@@ -17,6 +17,9 @@ services:
           -c default_statistics_target=100 -c random_page_cost=1.1 -c effective_io_concurrency=200
           -c work_mem=3495kB -c min_wal_size=1GB -c max_wal_size=4GB -c max_worker_processes=2
           -c max_parallel_workers_per_gather=1 -c max_parallel_workers=2 -c max_parallel_maintenance_workers=1"
+    build: 
+      context: .
+      dockerfile: .docker/pg_db.Dockerfile
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
@@ -28,8 +31,8 @@ services:
         max-file: "10"
     
     
-  api:
-    image: "api"
+  rieltor_api:
+    image: rieltor_api
     container_name: rieltor_api
     stop_signal: SIGINT
     ports:
@@ -40,12 +43,12 @@ services:
       - "pg_database:postgres"
     build:
       context: .
-      dockerfile: Dockerfile
-    working_dir: "/usr/src/rieltor_api"
+      dockerfile: .docker/api.Dockerfile
     volumes:
       - .:/usr/src/rieltor_api
     restart: always
     environment:
+      PYTHONUNBUFFERED: 1
       FASTAPI_HOST: "0.0.0.0"
       FASTAPI_PORT: 8000
       DATABASE_DRIVER: "postgresql+asyncpg"
