--- a/.gitignore
+++ b/.gitignore
@@ -165,5 +165,8 @@ poetry.lock
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Vs Code
+.vscode/
+
 # Postgres dumps
 **dumps
