--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ fastapi[all]==0.109.0
 sqlalchemy==2.0.25
 alembic==1.13.1
 asyncpg==0.29.0
-python-jose[cryptography]
-passlib[bcrypt]
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
