--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,3 +79,10 @@ skip-magic-trailing-comma = false
 line-ending = "auto"
 docstring-code-format = false
 docstring-code-line-length = "dynamic"
+
+
+[tool.mypy]
+python_version = "3.10"
+explicit_package_bases = true
+exclude = ["scripts/gen/src", "src/db/migrations", "tests/"]
+warn_no_return = false
