--- a/.config/api_example.env
+++ b/.config/api_example.env
@@ -4,6 +4,7 @@ FASTAPI__AUTH__SECRET_KEY=
 FASTAPI__AUTH__ALGORITHM=
 FASTAPI__AUTH__ACCESS_TOKEN_EXPIRE_MINUTES=
 FASTAPI__AUTH__GOOGLE_CLIENT_ID=
+TOOLS__GEOCODING_API_KEY=
 DATABASE__DRIVER=
 DATABASE__USER=
 DATABASE__PASSWORD=
