--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,8 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.config/api.env
+.config/db.env
 env/
 venv/
 ENV/
@@ -164,6 +166,9 @@ poetry.lock
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Vs Code
+.vscode/
 
 # Postgres dumps
 **dumps
