--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,8 @@ services:
     build: 
       context: .
       dockerfile: .docker/pg_db.Dockerfile
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: name
+    env_file:
+      - ".config/db.env"
     logging:
       driver: "json-file"
       options:
@@ -47,16 +45,6 @@ services:
     volumes:
       - .:/usr/src/rieltor_api
     restart: always
-    environment:
-      PYTHONUNBUFFERED: 1
-      FASTAPI_HOST: "0.0.0.0"
-      FASTAPI_PORT: 8000
-      DATABASE_DRIVER: "postgresql+asyncpg"
-      DATABASE_USER: "user"
-      DATABASE_PASSWORD: "password"
-      DATABASE_HOST: postgres
-      DATABASE_PORT: 5432
-      DATABASE_NAME: "name"
     logging:
       driver: "json-file"
       options:
