--- a/.config/api_example.env
+++ b/.config/api_example.env
@@ -4,6 +4,10 @@ FASTAPI__AUTH__SECRET_KEY=
 FASTAPI__AUTH__ALGORITHM=
 FASTAPI__AUTH__ACCESS_TOKEN_EXPIRE_MINUTES=
 FASTAPI__AUTH__GOOGLE_CLIENT_ID=
+FASTAPI__AUTH__MAIL=
+FASTAPI__AUTH__PASSWORD=
+FASTAPI__AUTH__MAIL_PORT=
+FASTAPI__AUTH__MAIL_SERVER=
 TOOLS__GEOCODING_API_KEY=
 DATABASE__DRIVER=
 DATABASE__USER=
