--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ asyncpg==0.29.0
 google-auth==2.29.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+fastapi-mail==1.4.1
 requests==2.31.0
